# valuate

./: .gitignore  PKGBUILD  README.md  meson.build  org.x.valuate.json  valuate.doap
.github/workflows/: build-packages.yml
data/: meson.build  org.x.valuate.appdata.xml.in  org.x.valuate.desktop.in  org.x.valuate.gschema.xml  valuate.1  valuatecmd.1
debian/: changelog  control  copyright
help/: meson.build
lib/: currency-provider.vala  function-manager.vala  math-variables.vala
po/: POTFILES.in  de.po  es.po  fr.po
search-provider/: meson.build  org.x.valuate-search-provider.ini  org.x.valuate.SearchProvider.service.in  search-provider.vala
snap/: snapcraft.yaml
src/: math-buttons.vala  math-converter.vala  math-display.vala  math-function-popover.vala  math-history.vala  math-preferences.vala  math-variable-popover.vala  math-window.vala  meson.build  valuate.vala  valuatecmd.vala
src/ui/: math-preferences.ui  math-window.ui  valuate.gresource.xml
tests/: environment.py  meson.build  test-entry-controller.gresource.xml  test-gci-entry-controller.vala
vcalc/: meson.build  mpfr-glue.vala  namespace-info.vala.in  vcalc.pc.in
vci/: meson.build  namespace-info.vala.in  vci.deps.in  vci.pc.in
